syntax = "proto3";

option csharp_namespace = "GrpcApi";

package WeatherForecast;

import "google/protobuf/wrappers.proto";
import "google/type/date.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";


// The weatherForecast service definition.
service WeatherForecastApi {
  // Returns forecasts
  rpc GetRandomForecasts (google.protobuf.Empty) returns (stream WeatherForecastApiModel){
      option (google.api.http) = {
          get: "/weatherforecast"
      };
  };
}


// the api model
message WeatherForecastApiModel {
    // the date of this forecast
    google.type.Date date                 = 1;
    // temperature in Celsius
    int32 temperature_c                   = 2;
    // temperature in fahrenheit
    int32 temperature_f                   = 3;
    // summary in words
    google.protobuf.StringValue summary   = 4;
}
